testsuite/invalid-types/call3.qc
void(float, string, entity) fun = #1;

void() main = {
	local entity x;
	fun(x, x, x);
};
